--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,11 +31,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: SHA8
-      id: sha8
+    - name: Variables
+      id: variables
       env:
         GIT_SHA: ${{ github.sha }}
-      run: ./.github/workflows/sha8.sh
+      run: ./.github/workflows/variables.sh
 
     - uses: ./
       with:
@@ -43,4 +43,4 @@ jobs:
         password: "${{ secrets.GITHUB_TOKEN }}"
         registry: docker.pkg.github.com
         image_name: ${{ github.repository }}
-        image_tag: ${{ steps.sha8.outputs.sha8 }}
+        image_tag: ${{ steps.variables.outputs.sha8 }}
